--- a/checkout.css
+++ b/checkout.css
@@ -56,3 +56,10 @@ h2 {
   border-radius: 5px;
   padding: 16px;
 }
+.cartempty {
+  margin: 200px 0 150px;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 500;
+  line-height: 40px;
+}
