--- a/productdetail.css
+++ b/productdetail.css
@@ -79,17 +79,25 @@ h3 span {
   border-radius: 4px;
   cursor: pointer;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  transition: 0.2s ease-in;
+  border: 2px solid transparent;
 }
 #addtocart:hover {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
 }
-
+#addtocart:hover {
+  color: #009688;
+  border-color: #009688;
+  background-color: #fff;
+  box-shadow: none;
+}
 /* left section */
 .leftimgcontainer {
   width: 100%;
 }
 .leftimgcontainer img {
   width: 100%;
+  border-radius: 10px;
 }
 
 /* responsive */
