--- a/checkout.css
+++ b/checkout.css
@@ -17,7 +17,14 @@ h2 {
   font-size: 36px;
   font-weight: 400;
   margin: 0;
-  margin-bottom: 48px;
+  margin-bottom: 20px;
+}
+.sectionouter > h2,
+.sectionouter > h4 {
+  margin-left: 14.5%;
+}
+h4 {
+  font-size: 18px;
 }
 
 .leftsec {
@@ -62,4 +69,35 @@ h2 {
   text-align: center;
   font-weight: 500;
   line-height: 40px;
+}
+.placeorderbtnouter {
+  margin-top: 35px;
+}
+#placeorderbtn {
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  padding: 10px 20px;
+  letter-spacing: 2px;
+  background-color: #009688;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5);
+  border: 2px solid transparent;
+  transition: 0.2s ease-in;
+}
+#placeorderbtn:hover {
+  color: #009688;
+  border-color: #009688;
+  background-color: #fff;
+  box-shadow: none;
+}
+@media (max-width: 480px) {
+  .mainsec {
+    flex-direction: column;
+  }
+  .leftsec {
+    width: 100%;
+  }
 }
