--- a/style.css
+++ b/style.css
@@ -25,16 +25,23 @@ a {
   margin: 30px 10px;
   cursor: pointer;
   background-color: #fff;
-  box-shadow: 0 2px 10px rgb(0 0 0 / 0.3);
+  /* box-shadow: 0 2px 10px rgb(0 0 0 / 0.3); */
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.2s ease;
+  box-shadow: 0 0px 7px rgba(0, 0, 0, 0.2);
 }
 .box:hover {
-  box-shadow: 0 2px 10px rgb(0 0 0 / 0.7);
+  border: none;
+  transform: scale(1.02);
 }
 .box img {
   width: 100%;
 }
 .box .productdesc {
-  padding: 10px;
+  padding: 20px 10px 10px;
+  transition: 0.2s ease-in;
+  margin-top: -10px;
 }
 
 h2 {
